
noinst_LTLIBRARIES = libMEAL.la

nobase_include_HEADERS = \
        MEAL/Agent.h \
        MEAL/Argument.h \
        MEAL/ArgumentPolicyAdapter.h \
        MEAL/ArgumentPolicy.h \
        MEAL/Axis.h \
	MEAL/BasisRule.h \
        MEAL/BinaryRule.h \
        MEAL/BinaryScalar.h \
        MEAL/Boost.h \
	MEAL/Boost1.h \
	MEAL/BoostUnion.h \
        MEAL/Cached.h \
        MEAL/CalculatePolicy.h \
	MEAL/Cast.h \
        MEAL/ChainRule.h \
        MEAL/Coherency.h \
        MEAL/Complex2Constant.h \
	MEAL/Complex.h \
	MEAL/ComplexCartesian.h \
	MEAL/ComplexCorrelation.h \
	MEAL/ComplexRVM.h \
        MEAL/Complex2.h \
        MEAL/Complex2Math.h \
	MEAL/Complex4.h \
        MEAL/Composite.h \
        MEAL/CongruenceTransformation.h \
        MEAL/Constant.h \
	MEAL/Convert.h \
	MEAL/CrossCoherency.h \
        MEAL/CyclicParameter.h \
	MEAL/Depolarizer.h \
	MEAL/Evaluable.h \
        MEAL/EvaluationPolicy.h \
	MEAL/EvaluationTracer.h \
        MEAL/ForwardChanged.h \
        MEAL/ForwardResult.h \
        MEAL/Function.h \
	MEAL/FunctionInterface.h \
        MEAL/FunctionPolicy.h \
        MEAL/Gain.h \
        MEAL/Gaussian.h \
        MEAL/GaussJordan.h \
	MEAL/GimbalLockMonitor.h \
        MEAL/GroupRule.h \
        MEAL/Invariant.h \
        MEAL/InverseRule.h \
	MEAL/JonesCloude.h \
	MEAL/JonesMueller.h \
	MEAL/JonesSpinor.h \
	MEAL/LeastSquares.h \
        MEAL/LevenbergMarquardt.h \
        MEAL/Mean.h \
	MEAL/ModeCoherency.h \
	MEAL/MuellerTransformation.h \
	MEAL/Multivariate.h \
	MEAL/MultivariatePolicy.h \
        MEAL/NegationRule.h \
        MEAL/NoParameters.h \
        MEAL/NormalizeStokes.h \
        MEAL/NotCached.h \
	MEAL/Null.h \
        MEAL/OneParameter.h \
	MEAL/OrthogonalModes.h \
	MEAL/OrthoRVM.h \
        MEAL/ParameterPolicy.h \
	MEAL/ParameterTracer.h \
        MEAL/Parameters.h \
        MEAL/parse.h \
        MEAL/Phase.h \
	MEAL/PhaseGradients.h \
        MEAL/PhysicalCoherency.h \
        MEAL/Polar.h \
        MEAL/Polynomial.h \
        MEAL/PositionAngles.h \
        MEAL/PowerLaw.h \
	MEAL/ProductRule.h \
	MEAL/ProjectGradient.h \
	MEAL/Projection.h \
	MEAL/RandomPolar.h \
	MEAL/Real4.h \
        MEAL/RotatingVectorModel.h \
        MEAL/Rotation.h \
	MEAL/Rotation1.h \
        MEAL/RuleMath.h \
	MEAL/RVM.h \
        MEAL/Scalar.h \
        MEAL/ScalarAbsolute.h \
        MEAL/ScalarArgument.h \
        MEAL/ScalarBesselI0.h \
        MEAL/ScalarConstant.h \
        MEAL/ScalarCosine.h \
	MEAL/ScalarErrorFunction.h \
        MEAL/ScalarExponential.h \
        MEAL/ScalarHypCosine.h \
        MEAL/ScalarHypSine.h \
        MEAL/ScalarHypTangent.h \
        MEAL/ScalarInverseHypTangent.h \
	MEAL/ScalarInverseTangent.h \
        MEAL/ScalarInverseTangent2.h \
        MEAL/ScalarLogarithm.h \
	MEAL/ScalarLogistic.h \
        MEAL/ScalarMath.h \
        MEAL/ScalarParameter.h \
        MEAL/ScalarPower.h \
        MEAL/ScalarRoot.h \
        MEAL/ScalarSine.h \
        MEAL/ScalarTangent.h \
	MEAL/ScalarVector.h \
        MEAL/ScaledVonMisesDeriv.h \
        MEAL/ScaledVonMises.h \
	MEAL/SingularCoherency.h \
	MEAL/Spinor.h \
	MEAL/SpinorJones.h \
	MEAL/Steps.h \
	MEAL/StokesCovariance.h \
	MEAL/StokesError.h \
        MEAL/SumRule.h \
        MEAL/Tracer.h \
	MEAL/Transformation.h \
	MEAL/UnaryConvert.h \
        MEAL/UnaryRule.h \
        MEAL/UnaryScalar.h \
	MEAL/Union.h \
	MEAL/UnitTangent.h \
        MEAL/Univariate.h \
        MEAL/UnivariatePolicy.h \
	MEAL/Value.h \
	MEAL/Vectorize.h \
        MEAL/VectorRule.h \
        MEAL/VelocityModel.h \
        MEAL/VonMises.h \
	MEAL/Wrap.h

libMEAL_la_SOURCES = \
        Argument.C \
        ArgumentPolicy.C \
	besrat.f \
	bessi0.c \
	vkappa.f \
        BinaryScalar.C \
        Boost.C \
	Boost1.C \
	BoostUnion.C \
	ChainRule.C \
        Coherency.C \
	Complex.C \
	ComplexCartesian.C \
	ComplexCorrelation.C \
	ComplexRVM.C \
        Complex2.C \
        Complex2Constant.C \
        Complex2Math.C \
	Complex4.C \
        Composite.C \
        CongruenceTransformation.C \
	CrossCoherency.C \
        CyclicParameter.C \
	Depolarizer.C \
        ForwardChanged.C \
        Function.C \
        Function_factory.C \
        Function_load.C \
        Function_parse.C \
        Function_print.C \
	FunctionInterface.C \
	FunctionPolicy.C \
        Gaussian.C \
	GimbalLockMonitor.C \
        Invariant.C \
	JonesCloude.C \
	JonesMueller.C \
	JonesSpinor.C \
	LeastSquares.C \
	ModeCoherency.C \
	MuellerTransformation.C \
	MultivariatePolicy.C \
        NormalizeStokes.C \
	Null.C \
        OneParameter.C \
	OrthogonalModes.C \
	OrthoRVM.C \
        ParameterPolicy.C \
	ParameterTracer.C \
        Parameters.C \
        PhysicalCoherency.C \
        Polar.C \
        Polynomial.C \
        PositionAngles.C \
        PowerLaw.C \
        Projection.C \
	RandomPolar.C \
	Real4.C \
        RotatingVectorModel.C \
        Rotation.C \
	Rotation1.C \
	RVM.C \
        Scalar.C \
        ScalarAbsolute.C \
        ScalarArgument.C \
        ScalarConstant.C \
        ScalarCosine.C \
	ScalarErrorFunction.C \
        ScalarExponential.C \
        ScalarHypCosine.C \
        ScalarHypSine.C \
        ScalarHypTangent.C \
        ScalarInverseHypTangent.C \
        ScalarInverseTangent.C \
        ScalarInverseTangent2.C \
        ScalarLogarithm.C \
	ScalarLogistic.C \
        ScalarMath.C \
        ScalarParameter.C \
        ScalarPower.C \
        ScalarRoot.C \
        ScalarSine.C \
        ScalarTangent.C \
	ScalarVector.C \
        ScaledVonMises.C \
        ScaledVonMisesDeriv.C \
	SingularCoherency.C \
	Spinor.C \
	SpinorJones.C \
	Steps.C \
	StokesCovariance.C \
	StokesError.C \
        Tracer.C \
        UnaryScalar.C \
	Union.C \
	UnitTangent.C \
        UnivariatePolicy.C \
        VelocityModel.C 

TESTS = \
	test_copy test_Axis test_Projection test_Composite test_get_imap \
	test_BasisRule test_Scalar test_Complex2Product			 \
	test_Polar test_Rotation					 \
	test_Invariant test_CyclicParameter test_Univariate		 \
	test_StokesError test_StokesCovariance test_Vectorize		 \
	test_UnitTangent test_ComplexCorrelation	 \
	test_Spinor test_CrossCoherency test_JonesMueller test_bessi0

check_PROGRAMS = $(TESTS) test_Function_load 

test_copy_SOURCES		= test_copy.C
test_Axis_SOURCES		= test_Axis.C
test_Projection_SOURCES		= test_Projection.C
test_Composite_SOURCES		= test_Composite.C
test_get_imap_SOURCES		= test_get_imap.C
test_BasisRule_SOURCES		= test_BasisRule.C
test_Scalar_SOURCES		= test_Scalar.C
test_Complex2Product_SOURCES	= test_Complex2Product.C
test_Polar_SOURCES		= test_Polar.C
test_Rotation_SOURCES		= test_Rotation.C
test_CyclicParameter_SOURCES    = test_CyclicParameter.C
test_Univariate_SOURCES		= test_Univariate.C
test_Invariant_SOURCES		= test_Invariant.C
test_StokesError_SOURCES	= test_StokesError.C 
test_StokesCovariance_SOURCES	= test_StokesCovariance.C 
test_Function_load_SOURCES	= test_Function_load.C
test_Vectorize_SOURCES		= test_Vectorize.C
test_UnitTangent_SOURCES	= test_UnitTangent.C
test_ComplexCorrelation_SOURCES = test_ComplexCorrelation.C
test_Spinor_SOURCES		= test_Spinor.C
test_CrossCoherency_SOURCES	= test_CrossCoherency.C
test_JonesMueller_SOURCES	= test_JonesMueller.C

##############################################################################
#
# Rule to generate MEAL.pdf
#

# convert Postscript to Abobe Acrobat Portable Document Format
%.pdf: %.ps
	ps2pdf $<

# convert dvi file format to Postscript using Adobe safe ligatures
%.ps: %.dvi
	dvips -Ppdf -G0 -o $@ $<

%.dvi: $(srcdir)/%.tex $(FIGS) $(TEXS)
	latex $*
	latex $* 

doc: MEAL.pdf

#############################################################################
#

LDADD = libMEAL.la $(top_builddir)/Util/units/libunits.la \
	$(top_builddir)/Util/epsic/src/libepsic.la

include $(top_srcdir)/config/Makefile.include


