
noinst_LTLIBRARIES = libRFIMitigation.la

nobase_include_HEADERS = \
	Pulsar/InterQuartileRange.h \
	Pulsar/LawnMower.h \
	Pulsar/Mower.h \
	Pulsar/RobustMower.h

libRFIMitigation_la_SOURCES = \
	InterQuartileRange.C \
	LawnMower.C \
	Mower.C \
	RobustMower.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

