
noinst_LTLIBRARIES = libRFIMitigation.la

nobase_include_HEADERS = \
	Pulsar/DoubleMedian.h \
	Pulsar/InterQuartileRange.h \
	Pulsar/LawnMower.h \
	Pulsar/Mower.h \
	Pulsar/RobustMower.h \
	Pulsar/SumThreshold.h \
	Pulsar/TimeFrequencyMask.h \
	Pulsar/TimeFrequencySmooth.h \
	Pulsar/TimeFrequencyZap.h

libRFIMitigation_la_SOURCES = \
	DoubleMedian.C \
	InterQuartileRange.C \
	LawnMower.C \
	Mower.C \
	RobustMower.C \
	SumThreshold.C \
	TimeFrequencySmooth.C \
	TimeFrequencyZap.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

