
noinst_LTLIBRARIES = libResources.la

libResources_la_SOURCES = \
	CommonOptions.C \
	StandardOptions.C \
	standard_shell.C

nobase_include_HEADERS = \
	Pulsar/CommonOptions.h \
	Pulsar/StandardOptions.h

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

