
noinst_LTLIBRARIES = libTiming.la

nobase_include_HEADERS = 

libTiming_la_SOURCES = \
	GaussianShift.C \
	ParIntShift.C \
	PhaseGradShift.C \
	SincInterpShift.C \
	ZeroPadShift.C \
	FourierDomainFit.C

#############################################################################
#

include $(top_srcdir)/config/Makefile.include

